--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -663,6 +663,15 @@ body {
     overflow: hidden;
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 }
+.card3 {
+    display: flex;
+    flex-direction: row;
+    width:80%;
+    text-align: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content:start;
+}
 
 .poster {
     position: relative;
