--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -643,17 +643,26 @@ body {
 }
  */
 .wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    gap: 24px;
-    flex-wrap: wrap;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  gap: 24px;
+  flex-wrap: wrap;
 }
 
+.wrapper3 {
+  position: relative;
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
 .card2 {
     position: relative;
     width: 490px;
@@ -664,13 +673,7 @@ body {
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 }
 .card3 {
-    display: flex;
-    flex-direction: row;
-    width:80%;
     text-align: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content:start;
 }
 
 .poster {
@@ -1400,13 +1403,8 @@ padding: 0;     */
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 }
 .card3 {
-  display: flex;
-  flex-direction: row;
   width: 270px;
   text-align: center;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: start;
 }
 .details h1 {
     font-size: 1.0em;
